--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.6",
     "express": "latest",
     "express-minify": "latest",
+    "express-rate-limit": "^2.8.0",
     "express-session": "latest",
     "mysql": "latest",
     "nodemon": "latest",
