--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application forum for SSL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node src/index.js"
   },
   "author": "XeliteXirish",
   "license": "ISC",
